# Blog

./: .env  .gitignore  main.py  pyproject.toml
app/api/: __init__.py  auth_routes.py  post_routes.py  tag_routes.py  upload_routes.py  user_routes.py
app/config/: database.py  logging.py  settings.py  templates.py
app/constants/: constant.py
app/middleware/: auth_middleware.py  exception_handler.py  middleware.py
app/models/: models.py  schemas.py
app/repositories/: category_repository.py  post_repository.py  sqlalchemy_repository.py  tag_repository.py  user_repository.py
app/services/: category_service.py  post_service.py  tag_service.py  user_service.py
app/utils/: auth.py  exceptions.py  helpers.py  image_operations.py  image_uploader.py
app/web/: __init__.py  auth_routes.py  home.py  main_routes.py  post_routes.py  user_routes.py
static/css/: index.css  post_editor.css
static/js/: auth_modals.js  navbar.js  post_editor.js
templates/: home.html  layout.html
templates/components/: navbar.html
templates/errors/: 404.html  error.html
templates/layouts/: base.html
templates/pages/: blog.html  categories.html  connections.html  index.html  post.html  post_editor.html  user_posts.html  user_profile.html  users_search.html
templates/partials/: auth_modals.html  empty_state.html  navbar.html  pagination.html  post_card.html
