[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.139.0",
    "pillow>=12.3.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
]
